CD/catalog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  labels:
    service: catalog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: catalog
  template:
    metadata:
      labels:
        service: catalog
    spec:
      containers:
      - name: catalog
        image: lotfi029/catalog-service:latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8081
          name: https
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 40
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        resources:
          limits:
            memory: "2Gi"
            cpu: "2"
          requests:
            memory: "1Gi"
            cpu: "1"
